# Doctor-collaboration-bot-service

./: Dockerfile  README.md  pyproject.toml
db/: data.json
src/: main.py
src/api/: __init__.py  routes.py
src/core/: __init__.py  config.py
src/db/: __init__.py  data.json  handlers.py
src/documents/: __init__.py  exporter.py
src/models/: __init__.py
src/models/llm/: README.md
src/schemas/: __init__.py  bot.py  pdf.py
src/services/: __init__.py  bot_service.py  json_db_service.py  pdf_service.py
src/utils/: text_cleaner.py
