[project]
name = "doctor_collab_bot_service"
version = "0.1.0"
description = "A FastAPI-based service for doctor collaboration using LLMs"
authors = []
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.3",
    "python-multipart>=0.0.6",
    "PyPDF2>=3.0.0",
    "httpx>=0.24.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.0.287",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3
